--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.servlet.multipart.max-file-size=20MB
 #??? ?? ?? ??
 spring.servlet.multipart.max-request-size=100MB
 
+spring.jpa.properties.hibernate.default_batch_fetch_size = 1000
+
 #?? ??? ??? ??
 itemImgLocation=C:/shop/item
 #??? ??? ??
